# oop_lr

./: CMakeLists.txt  main.cpp
1lr/: CMakeLists.txt  main.cpp
1lr/include/: palindrome.h
1lr/src/: palindrome.cpp
1lr/test/: tests1.cpp
include/: array.h  figure.h  figure_array.h  rectangle.h  rhombus.h  trapezoid.h
src/: array.cpp  figure.cpp  figure_array.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
test/: test.cpp
